// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@root 1`] = `
".test div {
    color: green;
}
.test div span.cheese {
    color: blue;
}
span.cheese {
    color: red;
}
"
`;

exports[`Common case produces sensible result 1`] = `
".test {
    color: white;
    background: black;
}
"
`;

exports[`Complex 1`] = `
"@media screen and (min-width: 200px) {
    @supports (& .banana) {
        .test .banana .cheese .something1, .test .banana .cheese .something2.alternative:hover {
            padding-left: var(--property);
            width: 50%;
        }
    }
}
@media screen and (min-width: 200px) {
    .test-also {
        color: red;
    }
}
"
`;

exports[`Nested media query - complex 1`] = `
"@media screen and (min-width: 200px) {
    @supports (& .banana) {
        .test div {
            padding-left: var(--property);
            width: 50%;
        }
    }
}
"
`;

exports[`Nested media query 1`] = `
"@media screen and (min-width: 200px) {
    .test {
        padding-left: var(--property);
        width: 50%;
    }
}
"
`;

exports[`Self referential 1`] = `
".test .NestedOnce .test {
    color: green;
}
"
`;
